# WindowsResize

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  resource.hpp  resource.rc  windows_resize_app.cpp  windows_resize_app.hpp
